@@ -2,6 +2,7 @@ Changes from 1.2.12 to 1.2.14
 -----------------------------
 
 ** Bug
+    * [FELIX-2997] - java.lang.NullPointerException during shutdown while sending events
     * [FELIX-3002] - Embed the OBR specific information for the EventAdmin bundle in the manifest
 
 
